--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       Tuba Farm Equipment
       Tractor selector page
       
-      Author: 
-      Date:   
+      Author: Mackenzie Baker
+      Date:   4.24.2019
 
-      Filename: tractor.html
+      Filename: index.html
    -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
